syntax = "proto3";

option java_multiple_files = true;
option java_package = "primeserver_to_primeserver";

package primeserver_to_primeserver; // package do proto

service PrimeServer{
  /*
    * Canal deve ficar aberto entre o primeServer e o seu proximo, para receber msg a qualquer hora
    * Pedido de msg deve percorrer o anel até chegar no primeServer de Origem
    * Cada primeServer deve verificar se o numero esta no seu redis local
    * Caso sim, atualiza a mensagem com a informação isPrime true ou false
    * Caso não, mas se a mensagem já tiver a informação isPrime, atualiza o redis local
  */
  rpc ringMessage(stream RingRequest) returns (RingResponse);
}

message RingRequest{
  string ip = 1;
  int32 port = 2;
  int64 number = 3;
  bool isPrime = 4;
}

message RingResponse{
}